# models/Rating.js
@@ -1,0 +1,23 @@
+const mongoose = require("mongoose");
+
+const ratingSchema = new mongoose.Schema({
+  user: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: "User",
+    required: true,
+  },
+  recipeId: {
+    type: String,
+    required: true,
+  },
+  rating: {
+    type: Number,
+    required: true,
+    min: 1,
+    max: 5,
+  },
+});
+
+const Rating = mongoose.model("Rating", ratingSchema);
+
+module.exports = Rating;
